<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ForgottenPasswordActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_recover_your_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        />

    <EditText
        android:id="@+id/etForgottenEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/et_email"
        />

    <Button
        android:id="@+id/btnForgottenPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        />
</LinearLayout>
